[package]
name = "tg-dice-goblin"
version = "0.2.0"
authors = ["Chris Roche <github@rodaine.com>"]
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1.16", features = ["fs", "rt", "macros", "rt-multi-thread"]}

telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot", rev = "65ad5cfd578e9a1260ce6daac714eb2153c0bec7" }
rand = "0.7.3"
nom = "7"
log = "0.4"
stderrlog = "0.5"

[profile.release]
lto = "fat"
codegen-units = 1