[package]
name = "tg-dice-goblin"
version = "0.2.0"
authors = ["Chris Roche <github@rodaine.com>"]
edition = "2021"

[dependencies]
grammers-client = { git = "https://github.com/Lonami/grammers", features = ["markdown"] }
grammers-session = { git = "https://github.com/Lonami/grammers" }
log = "0.4.20"
nom = "7.1.3"
rand = "0.8.5"
simple_logger = "4.3.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "signal"] }
tikv-jemallocator = "0.5.4"

[profile.release]
lto = "fat"
codegen-units = 1
